--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>spring-boot-opentelemetry</artifactId>
+    <artifactId>spring-boot-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>spring-boot-opentelemetry</name>
-    <description>spring-boot-opentelemetry</description>
+    <name>spring-boot-service</name>
+    <description>spring-boot-service</description>
     <properties>
         <java.version>17</java.version>
         <spring-cloud.version>2021.0.5</spring-cloud.version>
