--- a/simple-flask-python-server/.env.docker
+++ b/simple-flask-python-server/.env.docker
@@ -9,3 +9,7 @@ LOGSTASH_HOST = "logstash"
 LOGSTASH_PORT = 5044
 
 LOGSTASH_TRANSPORT = "logstash_async.transport.BeatsTransport"
+
+DEBUG = True
+
+FLASK_APP = "simple-flask-python-server"
