--- a/prometheus-config.yml
+++ b/prometheus-config.yml
@@ -1,33 +1,24 @@
-# my global config
 global:
-  scrape_interval:     15s # Set the scrape interval to every 15 seconds. Default is every 1 minute.
-  evaluation_interval: 15s # Evaluate rules every 15 seconds. The default is every 1 minute.
-  # scrape_timeout is set to the global default (10s).
+  scrape_interval:     15s
+  evaluation_interval: 15s
 
-# Load rules once and periodically evaluate them according to the global 'evaluation_interval'.
-rule_files:
-# - "first_rules.yml"
-# - "second_rules.yml"
-
-# A scrape configuration containing exactly one endpoint to scrape:
-# Here it's Prometheus itself.
 scrape_configs:
-  # The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.
   - job_name: 'prometheus'
-      #      metrics_path: '/actuator/prometheus'
-      # metrics_path defaults to '/metrics'
-    # scheme defaults to 'http'.
     static_configs:
-      - targets: ['0.0.0.0:9090']
-
+      - targets: [ 'localhost:9090' ]
+  - job_name: 'tempo'
+    static_configs:
+      - targets: [ 'tempo:3200' ]
+  - job_name: 'opentelemetry-collector'
+    static_configs:
+      - targets: [ 'otel-collector:8888' ]
   - job_name: 'spring-boot-service'
     metrics_path: '/actuator/prometheus'
-    scrape_interval: 15s
     static_configs:
       - targets: ['spring-boot-service:8080']
-
   - job_name: 'simple-flask-python-server'
-    metrics_path: '/metrics'
-    scrape_interval: 15s
     static_configs:
       - targets: ['python-service:8091']
+  - job_name: 'opentelemetry'
+    static_configs:
+      - targets: ['otel-collector:1234']
