--- a/simple-flask-python-server/.env
+++ b/simple-flask-python-server/.env
@@ -9,3 +9,13 @@ LOGSTASH_HOST = "localhost"
 LOGSTASH_PORT = 5044
 
 LOGSTASH_TRANSPORT = "logstash_async.transport.BeatsTransport"
+
+OTEL_INSTRUMENTATION_HTTP_CAPTURE_HEADERS_SERVER_REQUEST = "content-type,X-B3-Traceid,X-B3-Spanid"
+
+#OTEL_LOGS_EXPORTER=otlp
+
+OTEL_SERVICE_NAME = "simple-flask-python-server"
+
+DEBUG = True
+
+FLASK_APP = "simple-flask-python-server"
