--- a/docker/fluent-bit-custom-parsers.conf
+++ b/docker/fluent-bit-custom-parsers.conf
@@ -6,10 +6,10 @@
 [PARSER]
     Name        parser
     Format      regex
-    Regex       /(?<TIME>.*)\s+(?<MESSAGE>.*)/
+    Regex       (?<time>[^ ]*) (?<level>[^ ]*) (?<msg>[^ ].*)
 #    Regex       ^(?<TIME>\d+-\d+-\d+ \d+:\d+:\d+\.\d+)\s+(?<LEVEL>\S+) \d+ --- \[\s*(?<THREAD>[^\]]+)\] (?<CONTEXT>\S+)\s+: (?<MESSAGE>.*)$
     Time_Key    time
-    Time_Format %Y-%m-%d %H:%M:%S.%L
+    Time_Format %Y-%m-%dT%H:%M:%S.%L
 
 #[MULTILINE_PARSER]
 #    name          supertest
