--- a/docker/fluent-bit.conf
+++ b/docker/fluent-bit.conf
@@ -3,9 +3,14 @@
     Daemon       Off
     Parsers_File custom_parsers.conf
     Log_Level   ${FLB_LOG_LEVEL}
-    HTTP_Server On
-    HTTP_Listen 0.0.0.0
-    HTTP_Port 24224
+#    HTTP_Server On
+#    HTTP_Listen 0.0.0.0
+#    HTTP_Port 24224
+
+[INPUT]
+    Name        forward
+    Listen      0.0.0.0
+    Port        24224
 
 [INPUT]
     Name        tail
@@ -25,17 +30,17 @@
 [FILTER]
     Name     parser
     Match    *
-    Key_Name log
+    Key_Name msg
     Parser   parser
-    Preserve_Key true
-    Reserve_Data true
+    Preserve_Key On
+    Reserve_Data On
     Log_Level   ${FLB_LOG_LEVEL}
 
-[FILTER]
-    Name rewrite_tag
-    Match *.log
-    Rule $log "^.*$" $log false
-    Emitter_Name re_emitted_indexing
+#[FILTER]
+#    Name rewrite_tag
+#    Match *.log
+#    Rule log "^.*$" $log false
+#    Emitter_Name re_emitted_indexing
 
 #[FILTER]
 #    Name          rewrite_tag
@@ -67,7 +72,19 @@
     Match *
     host ${HOST}
     port ${PORT}
-#     tenant_id ""
-#     label_keys $trace_id
-#    labels job=fluent-bit
-    Log_Level   ${FLB_LOG_LEVEL}
+
+#[OUTPUT]
+#    Name                 opentelemetry
+#    Match                *
+#    Host                 ${HOST}
+#    Port                 ${PORT}
+#    Metrics_uri          /v1/metrics
+#    Logs_uri             /v1/logs
+#    Traces_uri           /v1/traces
+#    Log_response_payload True
+#    Tls                  Off
+#    Tls.verify           Off
+#    # add user-defined labels
+#    add_label            job fluent-bit
+#    add_label            color blue
+#    Log_Level            ${FLB_LOG_LEVEL}
