--- a/auth-service/.env.docker
+++ b/auth-service/.env.docker
@@ -6,18 +6,42 @@ OTEL_INSTRUMENTATION_HTTP_CAPTURE_HEADERS_SERVER_REQUEST = "content-type,X-B3-Tr
 
 #OTEL_LOGS_EXPORTER=otlp
 
+OTEL_EXPORTER_OTLP_ENDPOINT = "http://otel-collector:4317"
+
+OTEL_EXPORTER_OTLP_TRACES_ENDPOINT = "http://otel-collector:4317/v1/traces"
+
+OTEL_EXPORTER_OTLP_METRICS_INSECURE = "http://otel-collector:4317/v1/metrics"
+
+OTEL_EXPORTER_OTLP_LOGS_ENDPOINT =  "http://otel-collector:4317/v1/logs"
+
+OTEL_EXPORTER_OTLP_LOGS_INSECURE = True
+
 OTEL_PYTHON_FLASK_EXCLUDED_URLS = "/actuator/health"
 
-OTEL_SERVICE_NAME = "simple-flask-python-server"
+OTEL_SERVICE_NAME = "auth-service-python"
 
 DEBUG = True
 
 FLASK_APP = "simple-flask-python-server"
 
-OTEL_EXPORTER_OTLP_ENDPOINT = "http://otel-collector:4317"
-
 LOG_LEVEL = DEBUG
 
-SET_LOG_FILE = False
+SET_LOG_FILE = True
 
 LOG_FILE = "/tmp/simple-flask-python-server.log"
+
+PAYMENT_SCHEMA_AVRO_FILE = "/tmp/payment-schema.avsc"
+
+UPDATE_PAYMENT_SCHEMA_AVRO_FILE = "/tmp/update-payment-schema.avsc"
+
+BOOSTRAP_SERVERS = "kafka:9092"
+
+GROUP_ID = "python-server"
+
+PAYMENT_TOPIC = "payment-topic"
+
+UPDATE_PAYMENT_TOPIC = "update-payment-topic"
+
+SCHEMA_REGISTRY_URL = "http://schema-registry:8081"
+
+OTEL_EXPORTER_OTLP_TRACES_INSECURE = True
