--- a/sanction-service/.env
+++ b/sanction-service/.env
@@ -4,12 +4,16 @@ KAFKA_GROUP = golang-kafka-consumer
 
 KAFKA_TOPIC = payment-topic
 
+UPDATE_KAFKA_TOPIC = update-payment-topic
+
 LOG_FILE = /tmp/golang-kafka-consumer.log
 
 SERVICE_NAME = sanction-service-golang
 
 OTEL_EXPORTER_OTLP_ENDPOINT = localhost:4317
 
-NODEJS_EXPRESS_SERVER_URL = http://localhost:8083/v1/errors
-
 SET_LOG_FILE = True
+
+SCHEMA_REGISTRY_URL = http://localhost:8081
+
+SANCTION_NAMES = anonymous,Afghanistan,Iraq,Iran
