--- a/sanction-service/.env.docker
+++ b/sanction-service/.env.docker
@@ -2,7 +2,9 @@ KAFKA_BOOTSTRAP_SERVERS = kafka:9092
 
 KAFKA_GROUP = golang-kafka-consumer
 
-KAFKA_TOPIC = topic
+KAFKA_TOPIC = payment-topic
+
+UPDATE_KAFKA_TOPIC = update-payment-topic
 
 LOG_FILE = /tmp/golang-kafka-consumer.log
 
@@ -10,6 +12,8 @@ SERVICE_NAME = golang-kafka-consumer
 
 OTEL_EXPORTER_OTLP_ENDPOINT = otel-collector:4317
 
-NODEJS_EXPRESS_SERVER_URL = http://nodejs-service:8083/v1/errors
+SET_LOG_FILE = True
 
-SET_LOG_FILE = False
+SCHEMA_REGISTRY_URL = http://schema-registry:8081
+
+SANCTION_NAMES = anonymous,Afghanistan,Iraq,Iran
