Fixed redis timeout

--- a/user-service/.env
+++ b/user-service/.env
@@ -3,3 +3,5 @@ BOOSTRAP_SERVERS="kafka:9092"
 SCHEMA_REGISTRY_URL="http://schema-registry:8081"
 
 OTLP_URL="http://otel-collector:4317"
+
+OTLP_DEBUG_LEVEL = false
