--- a/auth-service/.env
+++ b/auth-service/.env
@@ -6,15 +6,19 @@ OTEL_INSTRUMENTATION_HTTP_CAPTURE_HEADERS_SERVER_REQUEST = "content-type,X-B3-Tr
 
 #OTEL_LOGS_EXPORTER=otlp
 
-OTEL_EXPORTER_OTLP_ENDPOINT = "http://localhost:4317"
+OTEL_EXPORTER_OTLP_ENDPOINT = "http://localhost:4318"
 
-OTEL_EXPORTER_OTLP_TRACES_ENDPOINT = "http://localhost:4317/v1/traces"
+OTEL_EXPORTER_OTLP_TRACES_ENDPOINT = "http://localhost:4318/v1/traces"
 
-OTEL_EXPORTER_OTLP_METRICS_INSECURE = "http://localhost:4317/v1/metrics"
+OTEL_EXPORTER_OTLP_METRICS_INSECURE = "http://localhost:4318/v1/metrics"
 
-OTEL_EXPORTER_OTLP_LOGS_ENDPOINT =  "http://localhost:4317/v1/logs"
+OTEL_EXPORTER_OTLP_LOGS_ENDPOINT =  "http://localhost:4318/v1/logs"
 
 OTEL_EXPORTER_OTLP_LOGS_INSECURE = True
+
+OTEL_EXPORTER_OTLP_INSECURE = True
+
+OTEL_EXPORTER_OTLP_TRACES_INSECURE = True
 
 OTEL_PYTHON_FLASK_EXCLUDED_URLS = "/actuator/health"
 
