--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -266,6 +266,8 @@ services:
       - SPRING_R2DBC_USERNAME=postgres
       - SPRING_R2DBC_PASSWORD=changeme
       - SPRING_DATA_REDIS_HOST=redis
+      - CLIENT_ID=${CLIENT_ID}
+      - CLIENT_SECRET=${CLIENT_SECRET}
     depends_on:
       - otel-collector
       - kafka
